clusters/may-chang/n8n/patch-deployment-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: default
spec:
  template:
    spec:
      containers:
        - name: n8n
