clusters/may-chang/n8n/patch-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: default
spec:
  tls:
    - hosts:
        - n8n.local
      secretName: n8n-tls
